# AndrejOrsula.github.io

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  index.html
.github/workflows/: ci.yml
assets/: manifest.json  sw.js
content/: bio.md  research.md  updates.yaml
content/publications/: bibliography.bib
content/teaching/: rmins.md
src/: app.rs  consts.rs  lib.rs  main.rs
src/macros/: include.rs  mod.rs
src/page/: mod.rs
src/page/variant/: mod.rs
src/page/variant/about/: mod.rs  page.rs  updates.rs
src/page/variant/blog/: mod.rs  page.rs
src/page/variant/cv/: mod.rs  page.rs
src/page/variant/demos/: mod.rs  page.rs
src/page/variant/projects/: mod.rs  page.rs
src/page/variant/research/: mod.rs  page.rs
src/page/variant/research/publications/: bibliography.rs  entry.rs  mod.rs
src/page/variant/software/: mod.rs  page.rs
src/page/variant/teaching/: mod.rs  page.rs
src/social/: mod.rs
src/style/: fonts.rs  mod.rs  text.rs  visuals.rs
src/utils/: egui.rs
