[package]
name = "portfolio_andrejorsula"
authors = ["Andrej Orsula <orsula.andrej@gmail.com>"]
description = "Portfolio of Andrej Orsula"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AndrejOrsula/AndrejOrsula.github.io"
homepage = "https://AndrejOrsula.github.io"
publish = false
rust-version = "1.79"
version = "0.1.0"

[dependencies]
## Core
eframe = { version = "0.29", default-features = false, features = [
    "glow",
    "persistence",
] }
egui = { version = "0.29", default-features = false }
egui_extras = { version = "0.29", default-features = false, features = [
    "all_loaders",
    "syntect",
] }
egui_commonmark = { version = "0.18", default-features = false, features = [
    "better_syntax_highlighting",
    "macros",
    "pulldown_cmark",
] }
## Encoding
image = { version = "0.25", default-features = false, features = ["png"] }
## Parsing
biblatex = { version = "0.10" }
serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.9" }
## Utilities
include_dir = { version = "0.7" }
itertools = { version = "0.14" }
paste = { version = "1.0" }
rustc-hash = { version = "2.1" }
strum = { version = "0.26", features = ["derive"] }
typed-builder = { version = "0.20" }
chrono = { version = "0.4", features = ["serde"] }

## Native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { version = "0.11" }
# Target-specific features
eframe = { version = "*", features = ["accesskit"] }
image = { version = "*", features = ["ico"] }

## Web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3" }
log = { version = "0.4" }
# Target-specific features
eframe = { version = "*", features = ["web_screen_reader"] }

[dev-dependencies]
indoc = { version = "2" }

[profile.release]
opt-level = 's'
lto = true
strip = true
panic = "abort"
codegen-units = 1
